# backend/docs/swagger.yaml
@@ -92,6 +92,25 @@ paths:
           schema:
             $ref: '#/definitions/domain.Attendance'
       summary: Record daily attendance
+  /attendances/checkout:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Checkout object
+        in: body
+        name: checkout
+        required: true
+        schema:
+          $ref: '#/definitions/domain.Attendance'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Attendance'
+      summary: Record checkout for an employee
   /employees:
     get:
       consumes:
@@ -182,6 +201,49 @@ paths:
               type: string
             type: object
       summary: Get employee by ID
+      tags:
+      - Employees
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Employee ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Employee object
+        in: body
+        name: employee
+        required: true
+        schema:
+          $ref: '#/definitions/domain.Employee'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Employee'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Update an existing employee
       tags:
       - Employees
   /payroll/generate:
